--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": " tsc && node dist/main.js"
+    "dev": " tsc && node --experimental-vm-modules dist/main.js",
+    "tests": "jest --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
     "tslint": "^6.1.3",
     "typescript": "^4.9.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "modulePathIgnorePatterns": ["<rootDir>/src/"]
   }
 }
